# bug-free-octo-guide

./: .gitignore  .prdprompt.md.swp  GEMINI.md  README.md  adk_best_practices.md  conventions.md  prd-output.md  prdprompt.md  pyproject.toml  requirements.txt  ticketprompt.md
agents/: prd_writer_agent.py
bug_free_octo_guide/: agent.py  prompt.py
bug_free_octo_guide/agents/: api_changes_agent.py  db_schema_agent.py  goals_agent.py  implementation_details_agent.py  orchestrator_agent.py  prd_sub_agents.py  prd_writer_agent.py  solution_proposal_agent.py  testing_strategy_agent.py  ticketing_agent.py
bug_free_octo_guide/planners/: prd_planner.py
bug_free_octo_guide/tools/: context_analysis_tool.py  prd_assembler_tool.py  prd_form_tools.py  project_analyzer.py
docs/phase-0/: README.md
docs/phase-1/: README.md
src/bug_free_octo_guide/: main.py  orchestrator.py
src/bug_free_octo_guide/agents/: prd_agent.py  ticketing_agent.py
tests/: test_agent.py  test_agent_e2e.py  test_api_changes_agent.py  test_db_schema_agent.py  test_goals_agent.py  test_implementation_details_agent.py  test_orchestrator.py  test_prd_assembler_tool_direct.py  test_prd_writer_agent.py  test_prd_writer_tool.py  test_solution_proposal_agent.py  test_testing_strategy_agent.py
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx
