[tool.poetry]
name = "bug-free-octo-guide"
version = "0.1.0"
description = "A multi-agent system for software development."
authors = ["Gemini"]

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.1.0"
google-adk = "^0.1.0"
python-dotenv = "^1.0.0"
sse-starlette = "^1.6.5"
PyGithub = "^1.59.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
